Covers fix3

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -5,6 +5,7 @@
   background-position: center;  
   background-repeat: no-repeat; 
   background-attachment: fixed; 
+  padding: 104px 0;
 }
 
 
